Change profile picture

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>===============================</p>
 
     <h3 id="about" style="margin-top: 40px">##### About me</h3>
-    <img src="images/profilepic.jpg" alt="Alexander Alexandrov" style="float:left;height:120px;margin-right:20px;margin-bottom:10px;">
+    <img src="images/alex_ascii.jpg" alt="Alexander Alexandrov" style="float:left;height:120px;margin-right:20px;margin-bottom:10px;">
     <p>I'm a permanent student, reader, and learner. Software engineering is my passion and I find it most satisfying to
         help interpret creative ideas into useful software tools.</p>
     <p>I value being in an environment where there is good opportunity to learn and where there are interesting
