--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
 
     <br/> <br/>
 
-    <h2>Alexander Alexandrov</h2>
-    <p>===============================</p>
+    <h2 style="margin-bottom: -20px;">Alexander Alexandrov</h2>
+    <h2>====================</h2>
 
-    <h3 id="about" style="margin-top: 40px">##### About me</h3>
-    <img src="images/alex_ascii.jpg" alt="Alexander Alexandrov" style="float:left;height:120px;margin-right:20px;margin-bottom:10px;">
+    <h3 id="about" style="margin-top: 40px">## About me</h3>
+    <img src="images/alex_ascii.jpg" alt="Alexander Alexandrov"
+         style="float:left;height:120px;margin-right:20px;margin-top:5px;margin-bottom:10px;">
     <p>I'm a permanent student, reader, and learner. Software engineering is my passion and I find it most satisfying to
         help interpret creative ideas into useful software tools.</p>
     <p>I value being in an environment where there is good opportunity to learn and where there are interesting
@@ -38,63 +39,64 @@
         people feel empowered, valued and effective members of a team.</p>
 
 
-    <h3 id="resume">##### Skills</h3>
-    <h4>Programming Languages</h4>
+    <h3 id="resume">## Skills</h3>
+    <p style="margin-bottom: -10px;">PROGRAMMING LANGUAGES</p>
     <ul>
-        <li>Rust</li>
-        <li>TypeScript</li>
-        <li>Java</li>
-        <li>Terraform</li>
+        <li>Rust &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp++---</li>
+        <li>TypeScript &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+++--</li>
+        <li>Java &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+++--</li>
+        <li>Terraform &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+----</li>
     </ul>
 
-    <h4>Other Techs</h4>
+    <p style="margin-bottom: -10px;">OTHER TECHS</p>
     <ul>
-        <li>React.js</li>
-        <li>Redux</li>
-        <li>Next.js</li>
-        <li>Some AWS Services</li>
-        <li>WebAssembly with Rust</li>
-        <li>PostgreSQL</li>
-        <li>Git</li>
-        <li>iBATIS / MyBatis</li>
+        <li>React.js &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+++--</li>
+        <li>Redux &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp++---</li>
+        <li>Next.js &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp++---</li>
+        <li>Some AWS Services &nbsp+----</li>
+        <li>WebAssembly (Rust) +----</li>
+        <li>PostgreSQL &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+++--</li>
+        <li>Git &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+++--</li>
+        <li>iBATIS / MyBatis &nbsp&nbsp+++--</li>
     </ul>
 
-    <h3>##### Career History</h3>
-    <h4>SOFTWARE DEVELOPER</h4>
+    <h3>## Career History</h3>
+    <p style="margin-bottom: 0;">SOFTWARE DEVELOPER</p>
     <p><i>DXC Technology | Apr 2020 - present</i></p>
 
-    <h4>WEB DEVELOPER INTERN</h4>
+    <p style="margin-bottom: 0;">WEB DEVELOPER INTERN</p>
     <p><i>Camplight | Sep 2019 - Apr 2020</i></p>
 
-    <h3>##### Education</h3>
-    <h4>CAMPLIGHT</h4>
+    <h3>## Education</h3>
+    <p style="margin-bottom: 0;">CAMPLIGHT</p>
     <p><i>React.js Fundamentals, Apr 2020</i></p>
-
-    <h4>SOFIA UNIVERSITY "ST. KLIMENT OHRIDSKI"</h4>
+    <p style="margin-bottom: 0;">SOFIA UNIVERSITY "ST. KLIMENT OHRIDSKI"</p>
     <p><i>PhD of Theology, 2019</i></p>
 
-    <h4>MAXPLUS</h4>
+    <p style="margin-bottom: 0;">MAXPLUS</p>
     <p><i>Java 8 Fundamentals, 2018</i></p>
 
-    <h4>UNIVERSITY OF FORESTRY</h4>
+    <p style="margin-bottom: 0;">UNIVERSITY OF FORESTRY</p>
     <p><i>Master of Engineering, 1997</i></p>
 
-    <h4>HIGH SCHOOL OF MATHEMATICS</h4>
+    <p style="margin-bottom: 0;">HIGH SCHOOL OF MATHEMATICS</p>
     <p><i>Mathematics, 1990</i></p>
 
-    <h3>##### Spoken Languages</h3>
+    <h3>## Spoken Languages</h3>
     <ul>
-        <li>Bulgarian - native</li>
-        <li>English - C1</li>
-        <li>Italian - B2</li>
-        <li>Russian - B1</li>
-        <li>Greek - B1</li>
+        <li>Bulgarian &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+++++</li>
+        <li>English &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp++++-</li>
+        <li>Italian &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+++--</li>
+        <li>Russian &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp++---</li>
+        <li>Greek &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp+----</li>
     </ul>
 
-    <h3 id="contact">##### Get in touch</h3>
+    <h3 id="contact">## Get in touch</h3>
     <ul>
         <li><a href="mailto:contact@alexandrov.cc">Email</a>:&nbsp &nbsp contact@alexandrov.cc</li>
-        <li><a href="https://www.google.com/maps/place/Lyulin,+Sofia,+Sofia/@42.7210415,23.2634153,14z">Location</a>: Sofia, Bulgaria</li>
+        <li><a href="https://www.google.com/maps/place/Lyulin,+Sofia,+Sofia/@42.7210415,23.2634153,14z">Location</a>:
+            Sofia, Bulgaria
+        </li>
         <li><a href="https://www.linkedin.com/in/alexandrovalexander/">LinkedIn</a>: @alexandrovalexander</li>
         <li><a href="https://fosstodon.org/@aal" rel="me">Mastodon</a>: @aal@fosstodon.org</li>
         <li><a href="https://ohai.social/@aal" rel="me">Mastodon</a>: @aal@ohai.social</li>
@@ -105,8 +107,11 @@
 
     <a href="#top">Go to top</a>
 
+    <hr class="dashed">
+
     <footer>
-        <p>Alexander Alexandrov 2022</p>
+        <p>> Copyright 2022 Alexander Alexandrov</p>
+        <p><a href="https://github.com/alexylon/alexylon-website">source code</a></p>
     </footer>
 </main>
 </body>
