Add Resume PDF file

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
     <h2 style="margin-bottom: -20px;">Alexander Alexandrov</h2>
     <h2>====================</h2>
+    <p>I'm a Sofia based Full Stack Software Engineer, currently working at DXC Technology. <br/>
+        I am in love with Rust programming language.<br/>
+        <a href="/assets/resume_alexander.pdf" download>Resume &dArr;</a>
+    </p>
 
     <h3 id="about" style="margin-top: 40px">## About me</h3>
     <img src="images/alex_ascii.jpg" alt="Alexander Alexandrov"
