--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2 style="margin-bottom: -20px;">Alexander Alexandrov</h2>
     <h2>====================</h2>
     <p>I'm a Sofia based Full Stack Software Engineer, currently working at DXC Technology. <br/>
-        I am in love with Rust programming language.<br/>
+        I am in love with Rust programming language.<br/><br/>
         <a href="/assets/resume_alexander.pdf" download>Resume &dArr;</a>
     </p>
 
