Add other website and favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="EN">
 <head>
     <title>Alexander</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.jpg">
     <link rel="stylesheet" href="/css/gruvbox-dark.css">
     <link rel="stylesheet" href="/css/alexess.css">
     <link rel="stylesheet" href="/css/hack.css">
@@ -97,14 +98,14 @@
 
     <h3 id="contact">## Get in touch</h3>
     <ul>
-        <li><a href="mailto:contact@alexandrov.cc">Email</a>:&nbsp &nbsp contact@alexandrov.cc</li>
-        <li><a href="https://www.google.com/maps/place/Lyulin,+Sofia,+Sofia/@42.7210415,23.2634153,14z">Location</a>:
-            Sofia, Bulgaria
+        <li><a href="mailto:contact@alexandrov.cc">Email</a>:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp contact@alexandrov.cc</li>
+        <li><a href="https://www.google.com/maps/place/Lyulin,+Sofia,+Sofia/@42.7210415,23.2634153,14z">Location</a>:&nbsp&nbsp&nbsp&nbsp&nbsp Sofia, Bulgaria
         </li>
-        <li><a href="https://www.linkedin.com/in/alexandrovalexander/">LinkedIn</a>: @alexandrovalexander</li>
-        <li><a href="https://fosstodon.org/@aal" rel="me">Mastodon</a>: @aal@fosstodon.org</li>
-        <li><a href="https://ohai.social/@aal" rel="me">Mastodon</a>: @aal@ohai.social</li>
-        <li><a href="https://github.com/alexylon">GitHub</a>: &nbsp alexylon</li>
+        <li><a href="https://www.linkedin.com/in/alexandrovalexander/">LinkedIn</a>:&nbsp&nbsp&nbsp&nbsp&nbsp @alexandrovalexander</li>
+        <li><a href="https://fosstodon.org/@aal" rel="me">Mastodon</a>:&nbsp&nbsp&nbsp&nbsp&nbsp @aal@fosstodon.org</li>
+        <li><a href="https://ohai.social/@aal" rel="me">Mastodon</a>:&nbsp&nbsp&nbsp&nbsp&nbsp @aal@ohai.social</li>
+        <li><a href="https://github.com/alexylon">GitHub</a>:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp alexylon</li>
+        <li><a href="https://alexandrov.cc">Other Website</a>: alexandrov.cc</li>
     </ul>
 
     <br/>
